<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StepTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Login Activity -->
    <string name="username">Username</string>
    <string name="username_hint">Your favorite account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_fail">Failed to Login!</string>
    <string name="invalid_credentials">You must login with a username, please try again</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- Home Activity -->
    <string name="main_menu">Main Menu</string>
    <string name="icon_desc">Menu Item</string>
    <string name="record_txt">Record</string>
    <string name="view_cal_txt">View Workouts</string>
    <string name="view_map_txt">View Workouts</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="no_workouts_found">No Workouts Found</string>

    <!-- Record Activity -->
    <string name="steps">Steps</string>
    <string name="calories">Calories</string>
    <string name="time">Time</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="next">Done</string>
    <string name="reset">Reset</string>
    <string name="title_activity_results">ResultsActivity</string>

    <!-- Results Activity -->
    <!-- uses steps, calories and time from Record Activity strings -->
    <string name="map_it">View Map</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_workout_list">WorkoutListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    
    <!-- WorkoutListActivity -->
    <string name="steps_taken">Steps: </string>
	<string name="calories_burned">Cals: </string>
	<string name="workout_list_str">Workout List</string>
	<string name="remove_all">Remove All</string>
	<string name="confirmation_title">Confirmation</string>
	<string name="confirm_all_deletion">Are you sure you want to remove all workouts?</string>
	<string name="confirm_workout_deletion">Are you sure you want to delete this workout?</string>
	<string name="yes_txt">Yes</string>
	<string name="no_txt">No</string>
    
	<!-- MapActivity -->
	<string name="download_map_problem">Download Map Failed</string>
	<string name="download_map_fail">Could not download map, please check your Internet connection and make sure Google Play Services are running!</string>
</resources>