 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/teal"
        >
<LinearLayout 
    android:id="@+id/linearLayout1"
    android:layout_marginTop="20dip"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_centerHorizontal="true"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps"
        android:textColor="@android:color/white"
        android:textSize="50dip" />

    <TextView
        android:id="@+id/stepsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="000"
        android:textColor="@android:color/white"
        android:textSize="40dip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories"
        android:textColor="@android:color/white"
        android:textSize="50dip" />

    <TextView
        android:id="@+id/caloriesTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@android:color/white"
        android:textSize="40dip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@android:color/white"
        android:textSize="50dip" />

    <TextView
        android:id="@+id/timeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00:00"
        android:textColor="@android:color/white"
        android:textSize="40dip" />
   
    
</LinearLayout>

<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/start_stop_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_weight="0.33" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_weight="0.33"
            android:enabled="false" />

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_weight="0.33"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>