<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="30dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="96dip"
                android:layout_height="96dip"
                android:src="@drawable/foot" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/steps"
                    android:textColor="@android:color/white"
                    android:textSize="32dip" />

                <TextView
                    android:id="@+id/steps_result_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_world"
                    android:textColor="@android:color/white"
                    android:textSize="30dip"
                    android:typeface="monospace" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="96dip"
                android:layout_height="96dip"
                android:src="@drawable/battery_charged" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calories"
                    android:textColor="@android:color/white"
                    android:textSize="32dip" />

                <TextView
                    android:id="@+id/calories_result_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_world"
                    android:textColor="@android:color/white"
                    android:textSize="30dip"
                    android:typeface="monospace" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="96dip"
                android:layout_height="96dip"
                android:src="@drawable/time" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="@android:color/white"
                    android:textSize="32dip" />

                <TextView
                    android:id="@+id/time_result_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_world"
                    android:textColor="@android:color/white"
                    android:textSize="30dip"
                    android:typeface="monospace" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        
    <Button android:id="@+id/map_btn"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight="0.50"
        android:text="@string/map_it"
        />
    <Button android:id="@+id/home_btn"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight="0.50"
        android:text="@string/home"
        />
    </LinearLayout>

</RelativeLayout>